# UCI_bike-sharing_demand-forecast_MLOps

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
scripts/: batch_predict.py  generate_drift_report.py  train.py
src/bike_demand/: batch.py  config.py  data.py  logging_utils.py  modeling.py  monitoring.py  training.py
src/bike_demand/api/: __init__.py  app.py  schemas.py  service.py
tests/: test_api.py  test_batch.py  test_data.py
