[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bike-demand-mlops"
version = "0.1.0"
description = "MLOps starter for bike-sharing demand forecasting with MLflow, FastAPI, and Evidently."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "evidently>=0.5.0,<0.8.0",
  "fastapi>=0.115.0,<1.0.0",
  "httpx>=0.28.0,<1.0.0",
  "mlflow>=2.14.0,<3.0.0",
  "numpy>=1.26.0,<3.0.0",
  "pandas>=2.2.0,<3.0.0",
  "pydantic>=2.8.0,<3.0.0",
  "scikit-learn>=1.5.0,<2.0.0",
  "uvicorn[standard]>=0.30.0,<1.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0,<9.0.0",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.setuptools.packages.find]
where = ["src"]
